Added example img in Output folder for Input in LaTeX

--- a/Main-Document_LaTeX/Sections/01_introduction.tex
+++ b/Main-Document_LaTeX/Sections/01_introduction.tex
@@ -3,3 +3,8 @@
 Dies ist die Einleitung der folgenden Arbeit. Das Seitenlayout, etc. sind den Regularien der \textcite{arbeitsstellefurpolitischesoziologiederbundesrepublikdeutschlandamottosuhrinstitutderfreienuniversitatberlinHandreichungVerfassenHaus2019} nachempfunden.
 
 \blindtext
+
+\begin{figure}
+	\includegraphics[width = \linewidth]{../output/figures/testgrafik}
+	\caption{Dies ist eine Testabbildung in einem Subdirectory des Parentdirectory´s.} \label{fig:Testabbildung}
+\end{figure}
