added R function to render short latex snippets as images

--- a/analysis/01_rmd-example1.Rmd
+++ b/analysis/01_rmd-example1.Rmd
@@ -9,11 +9,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(tidyverse)
+
+latexImg = function(latex){
+
+    link = paste0('http://latex.codecogs.com/gif.latex?',
+           gsub('\\=','%3D',URLencode(latex)))
+
+    link = gsub("(%..)","\\U\\1",link,perl=TRUE)
+    return(paste0('![](',link,')'))
+} ## geklaut von https://github.com/STAT545-UBC/Discussion/issues/102#issuecomment-142482040
 ```
 
 ## GitHub Documents
 
-This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated.
+This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated. `r latexImg('a = \\frac{b}{c}')`
 
 ## Including Code
 
